# mavir

./: .gitignore  Cargo.toml  README.md
src/: generate.rs  main.rs  parse.rs  util.rs
test/: README.md  test.sh
test/java_autovalue/: .gitignore  build.gradle
test/java_autovalue/src/main/java/com/github/johnmurray/mavir/: OuterClassWithNestedAutoValue.java  TestClass.java
test/mavir_autovalue/: build.gradle  settings.gradle
test/mavir_autovalue/gradle/wrapper/: gradle-wrapper.properties
test/mavir_autovalue/src/main/java/com/github/johnmurray/mavir/: OuterClassWithNestedAutoValue.java  TestClass.java
